--- a/ovrglood.html
+++ b/ovrglood.html
@@ -1,4 +1,6 @@
-<html><head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
     <title>Classroom</title>
     <link rel="icon" type="image/x-icon" href="https://gstatic.com/classroom/favicon.ico">
     <style>
