--- a/index.html
+++ b/index.html
@@ -204,7 +204,9 @@
     </style>
 <link rel="stylesheet" href="chrome-extension://iheobagjkfklnlikgihanlhcddjoihkg/fonts/Metropolis.css"></head>
 <body>
-    <center><img src="download (2).jpeg" width="100" height="101"><br>
+    <center> <a href="https://i1.sndcdn.com/artworks-F1wqal7E6HNyRsyY-UaMenA-t500x500.jpg">
+            <img src="download (2).jpeg" width="100" height="101" alt="Description of the image">
+        </a><br>
     <strong><font color="#4BD6DC"><font size="20"><b>The overflood</b><br>History Eliminator<br></font><font color="#4BD6DC">
     
     <button id="customizeButton" class=".button4">Customize</button><br><br>
