--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <link rel="stylesheet" href="chrome-extension://iheobagjkfklnlikgihanlhcddjoihkg/fonts/Metropolis.css"></head>
 <body>
     <center> <a href="https://i1.sndcdn.com/artworks-F1wqal7E6HNyRsyY-UaMenA-t500x500.jpg">
-            <img src="download (2).jpeg" width="100" height="101" alt="Description of the image">
+            <img src="https://i1.sndcdn.com/artworks-F1wqal7E6HNyRsyY-UaMenA-t500x500.jpg" width="100" height="101" alt="Description of the image">
         </a><br>
     <strong><font color="#4BD6DC"><font size="20"><b>The overflood</b><br>History Eliminator<br></font><font color="#4BD6DC">
     
