--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
     
     <button id="runScriptButton" class=".button4">Eliminate!!!</button><br><br>
     <b>If the Elimination is successful, you will see a popup with information</b><br>
+        <b>coded by pablo<br> don't fuckking ask to computor</b>
     
     <script>
         document.getElementById("customizeButton").addEventListener("click", function () {
